fixes issue when device interface has no ip adress

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ REDIS_HOST=redis
 REDIS_PASSWORD=notverysecurepwd
 REDIS_PORT=6379
 SKIP_SUPERUSER=false
-SECRET_KEY=r8d793usj&!dci#P9ghsdfsdfsdlsos9s8s
+SECRET_KEY=ObqltrK3fLC2yG6raIosrgu97G5ftMcZofyfXXnAUikCG0cTZ1
 SUPERUSER_EMAIL=admin@example.com
 SUPERUSER_NAME=admin
 SUPERUSER_PASSWORD=admin
