--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,3 +18,4 @@ jobs:
         uses: code-specialist/pypi-poetry-publish@v1.2
         with:
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: main
