--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,6 @@ name: Build and publish python package
 on:
   release:
     types: [ published ]
-  push:
-    branches:
-      - stefanhipfel-patch-1
 
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
@@ -35,5 +32,5 @@ jobs:
           git add ./netbox_atlas_plugin/__init__.py ./pyproject.toml
           git config --global user.name "Github Action Release Bot"
           git commit -m "Change version to ${{ github.event.release.tag_name }}" --allow-empty
-          git push origin HEAD:test5
+          git push origin HEAD:main
         shell: bash
