--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
 name: publish python package
 
 on:
-  release:
-    types: [ published ]
   push:
-    branches:
-      - test
+    tags:
+      - "v*.*.*"
 
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
@@ -30,15 +28,13 @@ jobs:
           sed -i -r 's/version*= *".*"/version="${{ github.event.release.tag_name }}"/g' ./setup.py
         shell: bash
 
-      - name: commit version to new_release branch
+      - name: Commit version to tag branch
         run: |
           git add ./netbox_atlas_plugin/__init__.py ./pyproject.toml
           git config --global user.name "Github Action Release Bot"
           git commit -m "Change version to ${{ github.event.release.tag_name }}" --allow-empty
-          git push origin HEAD:new_release
+          git push origin HEAD:${{ github.ref_name }}
         shell: bash
 
-      - name: create pull request
-        run: gh pr create -B main -H new_release --title 'Merge new release into main branch' --body 'Created by Github action'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
