--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Commit version to tag branch
         run: |
           git add ./netbox_atlas_plugin/__init__.py ./pyproject.toml
-          git config --global user.name "Github Action Release Bot"
-          git commit -m "Change version to ${{ github.event.release.tag_name }}" --allow-empty
+          git config --global user.name "Stefan Hipfel"
+          git config --global user.email "stefan.hipfel@sap.com"
+          git commit -m "Change version to ${{ github.ref_name }}" --allow-empty
           git push origin HEAD:${{ github.ref_name }}
         shell: bash
 
